cleaned pom.xml and updated dependency versions